# real-estate-ads

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  render.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: browse.py
apps/api/app/core/: config.py  logging.py  url_policy.py
apps/api/app/schemas/: browse.py
apps/api/app/services/: idempotency.py  rabbitmq.py  rate_limiter.py
apps/api/tests/: test_browse_api.py  test_config.py  test_url_policy.py
apps/frontend/: index.html  package.json
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/form/: Checkbox.tsx  FieldShell.tsx  NumberInput.tsx  RadioGroup.tsx  TextInput.tsx
apps/frontend/src/features/real-estate/: RealEstateForm.tsx  types.ts
apps/frontend/src/shared/formik/: controls.tsx  withFormikControl.tsx
apps/frontend/src/shared/validation/: moreThanSumOfFields.ts  realEstateSchema.ts  yupLocale.ts
apps/frontend/src/test/: formikControls.test.tsx  validation.test.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: __init__.py  main.py
