[project]
name = "homeoffer-browse-api"
version = "0.1.0"
description = "Public FastAPI service that accepts Avito browse jobs and publishes them to RabbitMQ."
requires-python = ">=3.12"
dependencies = [
  "aio-pika>=9.4.3,<10",
  "fastapi>=0.115.6,<1",
  "pydantic-settings>=2.7.0,<3",
  "uvicorn[standard]>=0.34.0,<1"
]

[project.optional-dependencies]
test = [
  "httpx>=0.28.1,<1",
  "pytest>=8.3.4,<9"
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
