[project]
name = "homeoffer-browse-worker"
version = "0.1.0"
description = "RabbitMQ consumer that renders Avito pages through Selenium Grid and logs HTML."
requires-python = ">=3.12"
dependencies = [
  "pika>=1.3.2,<2",
  "pydantic>=2.10.0,<3",
  "pydantic-settings>=2.7.0,<3",
  "selenium>=4.27.1,<5"
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
